# tenma-serial

./: .gitignore  README.md  dev_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: python-package.yml
docs/: conf.py
docs/tools/: tenma-applet.rst  tenma-control.rst
examples/python/: output_plotting.py
src/tenma_serial/: __init__.py  gtk_indicator.py  tenma_dc_lib.py
tenma/: __init__.py  gtkIndicator.py  gtk_indicator.py  tenmaControl.py  tenmaDcLib.py  tenma_control.py  tenma_dc_lib.py
tests/: test_tenma_control.py  test_tenma_dclib.py
