[metadata]
name = tenma-serial
author = Jordi Castells
author_email = jordi.kstells@gmail.com
summary = Serial control of tenma device
description_file = README.md
description_content_type = text/markdown; charset=UTF-8
url = https://github.com/kxtells/tenma-serial
project_urls =
    Documentation = https://tenma-serial.readthedocs.io/en/latest/
license = GNU-3
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: X11 Applications :: GTK
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = 
    tenma
install_requires = 
    pyserial
python_requires = >=3.7


[options.entry_points]
console_scripts =
    tenma-control = tenma.tenma_control:main
    tenma-applet = tenma.gtk_indicator:main

[tool:pytest]
xfail_strict = true
cache_dir = .caches/.pytest

[coverage:paths]
source = tenma

[coverage:run]
branch = true
source = tenma
parallel = true
data_file = logs/.coverage

[coverage:report]
# goal is ~100%
fail_under = 10
show_missing = true
precision = 2
omit =
    *__init__.py
    *__main__.py
    setup.py

